added picture and bio of pedobear

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello Git World
+<title>Pedobear</title>
+<head><link rel="stylesheet" href="css/main.css"></head>
+<body>
+	<h1>Pedobear</h1>
+	<img src="img/pedobear.jpeg">
+	<p>This is a description of Pedobear</p>
+
+</body>
