added a description, embedded hyperlinks, created main.css, edited readme file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 	<h1>Pedobear</h1>
 	<img src="img/pedobear.jpeg">
-	<p>This is a description of Pedobear</p>
-
+	<p>Pedobear is a cartoon brown bear that is often used on online forums as a meme to mock pedophiles</p>
+	<p>Pedobear is not from a story, although the art style does make it seem like it could've came from the show <a href="http://en.wikipedia.org/wiki/Adventure_Time">Adventure Time</a>. Pedobear actually originated from popular Japanese bulletin board website called <a href="http://2ch.en.utf8art.com/">2channel</a>. It was introduced as Kuma (Japanese for bear), had no sexual connotations, and appeared as a single lined ASCII art. It eventually evolved into the image above and adopted a new meaning. </p>
+<a href=""></a>
 </body>
